# Generated by Django 6.0.1 on 2026-02-20 12:48

import django.db.models.deletion
from django.conf import settings
import django.contrib.postgres.fields
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('classrooms', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Assignments',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.TextField()),
                ('description', models.TextField(blank=True, null=True)),
                ('instructions', models.TextField(blank=True, null=True)),
                ('type', models.TextField(default='auto_grade')),
                ('difficulty', models.TextField(blank=True, null=True)),
                ('allowed_languages', django.contrib.postgres.fields.ArrayField(base_field=models.TextField(), blank=True, null=True, size=None)),
                ('start_date', models.DateTimeField(blank=True, null=True)),
                ('due_date', models.DateTimeField(blank=True, null=True)),
                ('late_submission_allowed', models.BooleanField(default=False)),
                ('late_penalty_percent', models.FloatField(default=0)),
                ('max_score', models.IntegerField(default=100)),
                ('max_attempts', models.IntegerField(blank=True, null=True)),
                ('show_testcase_result', models.BooleanField(default=True)),
                ('enable_leaderboard', models.BooleanField(default=False)),
                ('is_published', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('classroom', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='classrooms.classrooms')),
                ('created_by', models.ForeignKey(blank=True, db_column='created_by', null=True, on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'assignments',
            },
        ),
        migrations.CreateModel(
            name='AssignmentFiles',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('file_name', models.TextField()),
                ('file_url', models.TextField()),
                ('file_size', models.BigIntegerField(blank=True, null=True)),
                ('mime_type', models.TextField(blank=True, null=True)),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('assignment', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='assignments.assignments')),
            ],
            options={
                'db_table': 'assignment_files',
            },
        ),
        migrations.CreateModel(
            name='Testcases',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.TextField(blank=True, null=True)),
                ('input_data', models.TextField(blank=True, null=True)),
                ('expected_output', models.TextField(blank=True, null=True)),
                ('is_hidden', models.BooleanField(default=True)),
                ('is_sample', models.BooleanField(default=False)),
                ('weight', models.FloatField(default=1.0)),
                ('timeout_override', models.IntegerField(blank=True, null=True)),
                ('memory_override', models.IntegerField(blank=True, null=True)),
                ('order_index', models.IntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assignment', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='assignments.assignments')),
            ],
            options={
                'db_table': 'testcases',
            },
        ),
        migrations.CreateModel(
            name='AssignmentStatistics',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('total_submissions', models.IntegerField(default=0)),
                ('unique_students', models.IntegerField(default=0)),
                ('avg_score', models.FloatField(default=0)),
                ('max_score', models.FloatField(default=0)),
                ('min_score', models.FloatField(default=0)),
                ('pass_rate', models.FloatField(default=0)),
                ('avg_attempts', models.FloatField(default=0)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assignment', models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='assignments.assignments')),
                ('most_failed_testcase', models.ForeignKey(blank=True, db_column='most_failed_testcase', null=True, on_delete=django.db.models.deletion.SET_NULL, to='assignments.testcases')),
            ],
            options={
                'db_table': 'assignment_statistics',
            },
        ),
    ]
