# Generated by Django 6.0.1 on 2026-05-17 15:54

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('assignments', '0003_assignment_classroom_subject'),
    ]

    operations = [
        migrations.CreateModel(
            name='Rubrics',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=120)),
                ('description', models.TextField(blank=True, null=True)),
                ('max_points', models.FloatField(default=0)),
                ('order_index', models.IntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assignment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='rubrics', to='assignments.assignments')),
            ],
            options={
                'db_table': 'rubrics',
                'ordering': ('order_index', 'id'),
            },
        ),
    ]
